--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Big Trip</title>
-
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
   </head>
 
@@ -42,6 +42,7 @@
           </section>
       </div>
     </main>
+    <script src="./sw.js"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
